SQOOP-3441: Prepare Sqoop for Java 11 support
(Fero Szabo via Boglarka Egyed)